// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/icons/TextIcon Customized 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 28.985507246376812,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "mykross",
          "textAlign": "center",
        },
        Object {
          "color": "#c63733",
          "fontSize": 24,
        },
        Object {
          "backgroundColor": "#fff",
        },
      ]
    }
    testID="text-icon-test-id"
  >
    U
  </Text>
</View>
`;

exports[`Storyshots components/icons/TextIcon Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 28.985507246376812,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "mykross",
          "textAlign": "center",
        },
        Object {
          "color": "#c63733",
          "fontSize": 20,
        },
        undefined,
      ]
    }
    testID="text-icon-test-id"
  >
    U
  </Text>
</View>
`;
